--- a/src/components/Header/styles/header.scss
+++ b/src/components/Header/styles/header.scss
@@ -7,4 +7,9 @@
     justify-content: space-between;
     align-items: center;
     margin-top: 20px;
-}
+    @media (max-width: $tablet-media){
+        img{
+            width: 40%;
+        }
+    }
+}   
