--- a/src/components/Header/styles/navlink.scss
+++ b/src/components/Header/styles/navlink.scss
@@ -7,7 +7,10 @@
     margin-left: 50px;
     font-family: $font;
     font-size: 24px; 
-    // mobile size 12px
+    @media (max-width: $tablet-media){
+        font-size: 12px;
+        margin-left: 20px;
+    }
 }
 .active{
     @extend .navlink;
