--- a/src/components/Imagebox/styles/boxtitle.scss
+++ b/src/components/Imagebox/styles/boxtitle.scss
@@ -16,6 +16,16 @@
         font-size: 48px;
         color:white;
         font-family: $font;
+        @media (max-width: $tablet-media){
+            font-size: 24px;
+            text-align: center;
+            inline-size: 220px;
+            overflow-wrap: break-word;
+        }
+    }
+    @media (max-width: $tablet-media){
+        width: 90%;
+        height: 130px;
     }
 }
 
