--- a/src/components/home/card/styles/BoxCard.scss
+++ b/src/components/home/card/styles/BoxCard.scss
@@ -8,6 +8,9 @@
     box-sizing: border-box;
     display: flex;
     border-radius: 20px;
+    @media (max-width: $tablet-media){
+        width: 90%;
+    }
     .container__card {
         margin: auto;
         display: flex;
@@ -17,5 +20,9 @@
         gap: 2%;
         width: 100%;
         box-sizing: border-box;
+        @media (max-width: $tablet-media){
+            flex-direction: column;
+            gap: 10px;
+        }
     }
 }
