--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,13 +4,15 @@
 $primary-color: #FF6060;
 $secondary-color: #F6F6F6;
 $font : Montserrat;
+$desktop-media:1024px;
+$tablet-media:765px;
 
 body {
     @include reset();
     width: 100%;
-    min-width: 100vh;
+    min-width: 100%;
     height: 100%;
-    min-height: 100vh;
+    min-height: 100%;
     margin: 0;
     padding: 0;
     #root {
