--- a/src/components/Location/carroussel/styles/caroussel.scss
+++ b/src/components/Location/carroussel/styles/caroussel.scss
@@ -7,6 +7,7 @@
     background-color: antiquewhite;
     overflow: hidden;
     border-radius: 50px;
+    box-sizing: border-box;
     @media (max-width: $tablet-media){
         height: 400px;
         border-radius: 20px;
