--- a/src/components/Location/styles/Loc.scss
+++ b/src/components/Location/styles/Loc.scss
@@ -14,6 +14,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        box-sizing: border-box;
         @media (max-width: $tablet-media){
             flex-direction: column;
             width: 100%;
@@ -28,6 +29,7 @@
     justify-content: space-between;
     align-items: center;
     gap: 10%;
+    box-sizing: border-box;
     @media (max-width: $tablet-media){
         flex-direction: column;
         width: 100%;
