--- a/src/components/deployer/styles/deployer.scss
+++ b/src/components/deployer/styles/deployer.scss
@@ -98,6 +98,7 @@
         max-height: 0;
         p{
             transform: translateY(-200px);
+            transform-origin: top;
         }
     }
     
